--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,8 @@
 The AUTHOR of POSH (Paris OpenSHMEM) is:
     Camille Coti, LIPN, Universite Paris 13
     <camille.coti@lipn.univ-paris13.fr>
+
+Logo by:
+    Juliette Pouzet, LIPN, Universite Paris 13
+    <juliette.pouzet@lipn.univ-paris13.fr>
+    
